fix: add class to main bruger menu on factions page and style it to align better

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -463,6 +463,10 @@ figcaption a {
         margin-right: 35px;
     }
 
+    .burger-menu-factions {
+        margin-right: 5px;
+    }
+
     .burger-menu-sub {
         float: right;
         display: flex;
